# sota-edison-python

./: LICENSE  README.md  _put.py  _scp.py  _ssh.py  pyproject.toml
examples/: README.md  demo_all.py  demo_asr.py  demo_audio.py  demo_dialogue.py  demo_facetrack.py  demo_gestures.py  demo_vision.py
robot/: SotaCam.java  SotaFaceTrack.java  SotaVoice.java
src/sota_edison/: __init__.py  asr.py  audio.py  camera.py  core.py  gestures.py  interactive.py  robot_voices.json  vision.py
tests/: test_core.py  test_package.py  test_voices.py
