[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sota-edison-python"
version = "0.1.0"
description = "PC から Vstone Sota(Intel Edison版) をネットワーク越し(TCP)に制御する Python ライブラリ＋サンプル"
readme = "README.md"
requires-python = ">=3.8"
license = { file = "LICENSE" }
authors = [{ name = "Yasutomo Kawanishi", email = "yasutomo57jp@gmail.com" }]
keywords = ["sota", "vstone", "intel-edison", "robot", "robotics", "hri"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering",
]
dependencies = ["paramiko"]

[project.optional-dependencies]
tts = ["gtts"]
vision = ["opencv-python-headless", "numpy"]
asr = ["faster-whisper", "webrtcvad", "numpy"]
all = ["gtts", "opencv-python-headless", "numpy", "faster-whisper", "webrtcvad"]
dev = ["pytest"]

[project.urls]
Homepage = "https://github.com/yasutomo57jp/sota-edison-python"
Repository = "https://github.com/yasutomo57jp/sota-edison-python"

[project.scripts]
sota-interactive = "sota_edison.interactive:main"

[tool.hatch.build.targets.wheel]
packages = ["src/sota_edison"]

[tool.hatch.build.targets.wheel.force-include]
"src/sota_edison/robot_voices.json" = "sota_edison/robot_voices.json"

[tool.pytest.ini_options]
testpaths = ["tests"]
